mycms/media/reading.css
#nav-bar{
    padding-left: 80px;
    padding-top: 500px;
    padding-bottom: 40px;
}


#bg{
    background-color: white;
    height: 1500px;
    position: absolute;
}

#whiteBorder{
    background-color: #E6E3DC;
    height: 900px;  /*hardcoded */
    width: 1300px;
    position: relative;
    left: 0px;
    top: 200px;
	
}

#title{
    background-color: blue;
    font-size: 22pt;
    left: 40px;
    padding-left: 10px;
    padding-bottom: 10px;
    padding-top: 10px;
    position: relative;
    width: 1159px;
    text-align: center;
}


#outline{
    width: 350px;
    position: absolute;
	padding-bottom: 10px;
	background-color: #E6E3DC;
	
}

.abstractTitle{
    font-size: 24pt;
    padding-top: 5px;
}

.clear{
    height:0px;
    overflow:hidden;
	display: block;
}



.outlineBox{
    font-size: 10pt;
    font-family: helvetica;
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
}

.outlineTitle{
	padding-bottom: 5px;
	font-weight: bold;
	border-bottom: 1px dotted black;
}

.outlineRest{

}


#article{
    font-family: helvetica;
    font-size: 10pt;
    background-color: white;
	width: 500px;
	position: absolute;
	padding-top: 20px;
	padding-bottom: 20px;
	padding-left: 35px;
	padding-right: 35px;
	
	overflow: scroll;
}

#articleTitle{
	position: absolute;
	z-index: 1000;
	padding-left: 35px;
	padding-right: 35px;
	padding-top: 20px;
	font-size: 24pt;
	font-family: helvetica;
	height: 30px;
	background-color: white;
	width: 500px; /*match article width */
}

#reference{
    background-color: white;
    width: 285px;
    padding-bottom:60px;
    position:absolute;
    padding-left: 50px;
    padding-right: 10px;
	overflow: hidden;

    
}

.artPar{
}




.footNumber{
    color:red;
}

.references{
    font-size:8pt;
}

